cmake_minimum_required(VERSION 3.14)

project(crc32)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

file(GLOB_RECURSE CRC32_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/crc/*.c", "${CMAKE_CURRENT_SOURCE_DIR}/crc/*.cpp")
set(CRC32_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

add_library(crc32 STATIC ${CRC32_SOURCES})
target_include_directories(crc32 PRIVATE ${CRC32_INCLUDE_DIR} PUBLIC "${CRC32_INCLUDE_DIR}/crc")
